--- a/kontakt.html
+++ b/kontakt.html
@@ -27,7 +27,7 @@
         Ulice 220/4g<br>
         Praha 12
     </div>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4565.117691867433!2d14.304231264824006!3d50.047224637976505!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470bbe08eb2cf95b%3A0xabc2251a76a36987!2sVodafone+%C4%8Cesk%C3%A1+republika!5e0!3m2!1scs!2scz!4v1532352072809" width="200" height="200" frameborder="0" style="border: 1px dotted blue" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4565.117691867433!2d14.304231264824006!3d50.047224637976505!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470bbe08eb2cf95b%3A0xabc2251a76a36987!2sVodafone+%C4%8Cesk%C3%A1+republika!5e0!3m2!1scs!2scz!4v1532352072809" width="200" height="200" frameborder="0" allowfullscreen></iframe>
     <div>
         <h3>Telefon</h3>
         +420 777 221 122
